utilizando o metodo removeIf de list